--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.16",
+    "@icons-pack/react-simple-icons": "^7.1.0",
     "@portabletext/react": "^2.0.2",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.0.0",
@@ -14,6 +16,7 @@
     "next-sanity": "^4.1.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.5",
     "react-simple-typewriter": "^5.0.1",
     "react-social-icons": "^5.15.0",
     "sanity": "^3.0.0",
@@ -26,6 +29,7 @@
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
+    "tailwind-scrollbar": "^3.0.0",
     "tailwindcss": "^3.2.4",
     "typescript": "4.9.4"
   }
